objects/Audit_Finding__c.object
<CustomObject>
    <fields>
        <fullName>Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit</label>
        <referenceTo>CMPL123QMS__Internal_Audit__c</referenceTo>
        <relationshipLabel>Audit Findings</relationshipLabel>
        <relationshipName>Audit_Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_FindingcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>Today()+30</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Type__c</fullName>
        <label>Finding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OOS</fullName>
                </value>
                <value>
                    <fullName>Non conformance</fullName>
                </value>
                <value>
                    <fullName>OOT</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Deviation</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>EHS/Facilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Audit Finding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{00000}</displayFormat>
        <label>Audit Finding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Edit_Audit_findings_cancel_audit</fullName>
        <active>true</active>
        <errorConditionFormula>Audit__r.CMPL123_WF_Status__c =="Canceled - Audit"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_edit_create_audit_is_approved</fullName>
        <active>false</active>
        <errorConditionFormula>Audit__r.Is_Audit_Approved__c</errorConditionFormula>
        <errorMessage>Audit findings cannot be added or edited after audit has been approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Response_should_not_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(CMPL123_WF_Action__c)&amp;&amp; CMPL123_WF_Action__c =="Submit Response" &amp;&amp; ISBLANK( Response__c )</errorConditionFormula>
        <errorMessage>Please fill the Response field before performing the Submit response action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>do_not_add_new_findings_on_closed_audit</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Audit__r.CMPL123_WF_Action__c == "Close" , ISNEW() )</errorConditionFormula>
        <errorMessage>Cannot Add a New Audit Findings for the Closed Audit</errorMessage>
    </validationRules>
</CustomObject>